--- a/templates/Admin/dashboard.html.twig
+++ b/templates/Admin/dashboard.html.twig
@@ -10,7 +10,7 @@
                     </ol>
                     <div class="row">
                         <div class="col-xl-3 col-md-6">
-                            <div class="card bg-primary text-white mb-4">
+                            <div class="card blue-background text-white mb-4">
                                 <div class="card-body"><b>Pubs</b></div>
                                 <div class="card-footer justify-content-between">
                                     <p class="text-white">Pubs: <b>23</b></p>
@@ -21,7 +21,7 @@
                             </div>
                         </div>
                         <div class="col-xl-3 col-md-6">
-                            <div class="card bg-primary text-white mb-4">
+                            <div class="card blue-background text-white mb-4">
                                 <div class="card-body"><b>Team Members</b></div>
                                 <div class="card-footer justify-content-between">
                                     <p class="text-white">Team Members: <b>9</b></p>
@@ -32,7 +32,7 @@
                             </div>
                         </div>
                         <div class="col-xl-3 col-md-6">
-                            <div class="card bg-primary text-white mb-4">
+                            <div class="card blue-background text-white mb-4">
                                 <div class="card-body"><b>Jobs</b></div>
                                 <div class="card-footer justify-content-between">
                                     <p class="text-white">Jobs: <b>2</b></p>
@@ -43,7 +43,7 @@
                             </div>
                         </div>
                         <div class="col-xl-3 col-md-6">
-                            <div class="card bg-primary text-white mb-4">
+                            <div class="card blue-background text-white mb-4">
                                 <div class="card-body"><b>Applicants</b></div>
                                 <div class="card-footer justify-content-between">
                                     <p class="text-white">Applicants: <b>2</b></p>
