--- a/templates/Admin/admin_base.html.twig
+++ b/templates/Admin/admin_base.html.twig
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="{{ path('dashboard_pubs') }}">Add/Edit Pubs</a>
             </li>
             <li class="nav-item pl-2">
-                <a class="nav-link" href="#">Add/Edit Jobs</a>
+                <a class="nav-link" href="{{ path('dashboard_jobs') }}">Add/Edit Jobs</a>
             </li>
             <li class="nav-item pl-2">
                 <a class="nav-link" href="#">View Applicants</a>
