--- a/templates/Pages/contact.html.twig
+++ b/templates/Pages/contact.html.twig
@@ -64,7 +64,6 @@
                                               class="form-control md-textarea"></textarea>
                                     <small class="form-text text-muted">Your message</small>
                                 </div>
-
                             </div>
                         </div>
                         <!--Grid row-->
@@ -72,7 +71,7 @@
                     </form>
 
                     <div class="text-center text-md-left pb-4">
-                        <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
+                        <button class="btn btn-primary">Send</button>
                     </div>
                     <div class="status"></div>
                     <div class="google-maps pt-2">
