--- a/templates/Pages/apply.html.twig
+++ b/templates/Pages/apply.html.twig
@@ -8,36 +8,37 @@
             <p class="mb-4">All applications will be sent directly to our head office, we will be in touch via email shortly. </p>
         </div>
         <div class="col-lg-12">
-            <form>
+            <form method="post" action="/job/send">
                 <div class="form-row pb-3">
                     <div class="form-group col-md-6">
                         <label for="inputNamel4">Full Name</label>
-                        <input type="name" class="form-control" id="inputName4" placeholder="Name">
+                        <input type="name" class="form-control" id="name" name="name" required placeholder="Name">
                     </div>
                     <div class="form-group col-md-6">
                         <label for="inputEmail4">Email</label>
-                        <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                        <input type="email" class="form-control" id="email" name="email" required placeholder="Email">
                     </div>
                 </div>
 
                 <div class="form-group pb-3">
                     <label for="exampleFormControlTextarea1">Do you have a personal licence, if so how long have you held it for?</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="2"></textarea>
+                    <textarea class="form-control" id="personal_licence" name="personal_licence" required rows="2"></textarea>
                 </div>
                 <div class="form-group pb-3">
                     <label for="exampleFormControlTextarea1">How is your cellar knowledge?</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
+                    <textarea class="form-control" id="cellar_knowledge" name="cellar_knowledge" required rows="4"></textarea>
                     <small class="form-text text-muted">Please give examples from past roles.</small>
                 </div>
                 <div class="form-group pb-3">
                     <label for="exampleFormControlTextarea1">How many years experience do you have in a pub management role?</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
+                    <textarea class="form-control" id="experience" name="experience" required rows="4"></textarea>
                     <small class="form-text text-muted">Please give the names of some of the previous places you have worked.</small>
                 </div>
                 <div class="form-group pb-3">
                     <label for="exampleFormControlTextarea1">Would you be willing to relocate, if so what is your preferred area?</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
+                    <textarea class="form-control" id="relocate" name="relocate" required rows="4"></textarea>
                 </div>
+                <input hidden type="text" class="form-control" id="id" name="id" value="{{ job.id }}">
                 <button type="submit" class="btn btn-primary">Apply Now</button>
             </form>
         </div>
