--- a/templates/Admin/dashboard.html.twig
+++ b/templates/Admin/dashboard.html.twig
@@ -15,7 +15,7 @@
                                 <div class="card-footer justify-content-between">
                                     <p class="text-white">Pubs: <b>23</b></p>
                                     <p class="text-white">Active Pubs: <b>20</b></p>
-                                    <a class="small text-white stretched-link" href="#">Manage</a>
+                                    <a class="small text-white stretched-link" href="/dashboard/pubs">Manage</a>
                                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                 </div>
                             </div>
@@ -26,7 +26,7 @@
                                 <div class="card-footer justify-content-between">
                                     <p class="text-white">Team Members: <b>9</b></p>
                                     <p class="text-white">Active Team Members: <b>9</b></p>
-                                    <a class="small text-white stretched-link" href="#">Manage</a>
+                                    <a class="small text-white stretched-link" href="dashboard/team">Manage</a>
                                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                 </div>
                             </div>
@@ -37,7 +37,7 @@
                                 <div class="card-footer justify-content-between">
                                     <p class="text-white">Jobs: <b>2</b></p>
                                     <p class="text-white">Active Jobs: <b>1</b></p>
-                                    <a class="small text-white stretched-link" href="#">Manage</a>
+                                    <a class="small text-white stretched-link" href="dashboard/jobs">Manage</a>
                                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                 </div>
                             </div>
