--- a/templates/Admin/admin_jobs.html.twig
+++ b/templates/Admin/admin_jobs.html.twig
@@ -10,7 +10,7 @@
                     </ol>
 
                     {% for message in app.flashes('success') %}
-                        <div class="alert alert-success">
+                        <div class="alert alert-success text-center">
                             {{ message }}
                         </div>
                     {% endfor %}
