--- a/templates/Admin/dashboard.html.twig
+++ b/templates/Admin/dashboard.html.twig
@@ -13,8 +13,8 @@
                             <div class="card blue-background text-white mb-4">
                                 <div class="card-body"><b>Pubs</b></div>
                                 <div class="card-footer justify-content-between">
-                                    <p class="text-white">Pubs: <b>23</b></p>
-                                    <p class="text-white">Active Pubs: <b>20</b></p>
+                                    <p class="text-white">Pubs: <b>{{ pubCount }}</b></p>
+                                    <p class="text-white">Active Pubs: <b>{{ pubCount }}</b></p>
                                     <a class="small text-white stretched-link" href="/dashboard/pubs">Manage</a>
                                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                 </div>
@@ -24,8 +24,8 @@
                             <div class="card blue-background text-white mb-4">
                                 <div class="card-body"><b>Team Members</b></div>
                                 <div class="card-footer justify-content-between">
-                                    <p class="text-white">Team Members: <b>9</b></p>
-                                    <p class="text-white">Active Team Members: <b>9</b></p>
+                                    <p class="text-white">Team Members: <b>{{ teamCount }}</b></p>
+                                    <p class="text-white">Active Team Members: <b>{{ teamCount }}</b></p>
                                     <a class="small text-white stretched-link" href="dashboard/team">Manage</a>
                                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                 </div>
@@ -35,8 +35,8 @@
                             <div class="card blue-background text-white mb-4">
                                 <div class="card-body"><b>Jobs</b></div>
                                 <div class="card-footer justify-content-between">
-                                    <p class="text-white">Jobs: <b>2</b></p>
-                                    <p class="text-white">Active Jobs: <b>1</b></p>
+                                    <p class="text-white">Jobs: <b>{{ jobCount }}</b></p>
+                                    <p class="text-white">Active Jobs: <b>{{ jobCount }}</b></p>
                                     <a class="small text-white stretched-link" href="dashboard/jobs">Manage</a>
                                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                 </div>
