--- a/templates/Admin/admin_jobs.html.twig
+++ b/templates/Admin/admin_jobs.html.twig
@@ -96,7 +96,7 @@
                                                 <tbody>
                                                 {% for job in jobs %}
                                                 <tr>
-                                                    <td><a href="/dashboard/job/{{ job.id }}">{{ job.title }}</a></td>
+                                                    <td><a href="/dashboard/job/edit/{{ job.id }}">{{ job.title }}</a></td>
                                                     <td>{{ job.role }}</td>
                                                     <td width="8%">
                                                         <form method="post" action="/dashboard/job/delete">
