--- a/templates/Pages/admin.html.twig
+++ b/templates/Pages/admin.html.twig
@@ -13,7 +13,7 @@
 {% block content %}
 <div class="container">
     <div class="login-form">
-        <form action="/examples/actions/confirmation.php" method="post">
+        <form action="/dashboard" method="get">
             <h2 class="text-center">Sign In</h2>
             <div class="form-group">
                 <div class="input-group">
@@ -26,7 +26,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-primary btn-block">Log in</button>
+                <a href="/dashboard"><button type="submit" class="btn btn-primary btn-block">Log in</button><a/>
             </div>
         </form>
     </div>
