adds applications page

--- a/templates/Admin/dashboard.html.twig
+++ b/templates/Admin/dashboard.html.twig
@@ -46,9 +46,9 @@
                             <div class="card blue-background text-white mb-4">
                                 <div class="card-body"><b>Applicants</b></div>
                                 <div class="card-footer justify-content-between">
-                                    <p class="text-white">Applicants: <b>2</b></p>
-                                    <p class="text-white">Active Applicants: <b>1</b></p>
-                                    <a class="small text-white stretched-link" href="#">Manage</a>
+                                    <p class="text-white">Applicants: <b>{{ applicantCount }}</b></p>
+                                    <p class="text-white">Active Applicants: <b>{{ applicantCount }}</b></p>
+                                    <a class="small text-white stretched-link" href="dashboard/applicants">Manage</a>
                                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                 </div>
                             </div>
