--- a/templates/Admin/admin_base.html.twig
+++ b/templates/Admin/admin_base.html.twig
@@ -32,8 +32,8 @@
             <li {% if route_name == "dashboard_jobs" %} class="nav-item active pl-2" {% else %} class="nav-item pl-2" {% endif %}>
                 <a class="nav-link" href="{{ path('dashboard_jobs') }}">Add/Edit Jobs</a>
             </li>
-            <li class="nav-item pl-2">
-                <a class="nav-link" href="#">View Applicants</a>
+            <li {% if route_name == "dashboard_applicants" %} class="nav-item active pl-2" {% else %} class="nav-item pl-2" {% endif %}>
+                <a class="nav-link" href="{{ path('dashboard_applicants') }}">View Applicants</a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
