--- a/templates/Pages/admin.html.twig
+++ b/templates/Pages/admin.html.twig
@@ -13,20 +13,20 @@
 {% block content %}
 <div class="container">
     <div class="login-form">
-        <form action="/dashboard" method="get">
+        <form action="/admin" method="post">
             <h2 class="text-center">Sign In</h2>
             <div class="form-group">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Username" required="required">
+                    <input type="text" class="form-control" placeholder="Username" id="username" name="username" required="required">
                 </div>
             </div>
             <div class="form-group">
                 <div class="input-group">
-                    <input type="password" class="form-control" placeholder="Password" required="required">
+                    <input type="password" class="form-control" placeholder="Password" id="password" name="password" required="required">
                 </div>
             </div>
             <div class="form-group">
-                <a href="/dashboard"><button type="submit" class="btn btn-primary btn-block">Log in</button><a/>
+                <button type="submit" class="btn btn-primary btn-block">Log in</button>
             </div>
         </form>
     </div>
