--- a/templates/Admin/admin_base.html.twig
+++ b/templates/Admin/admin_base.html.twig
@@ -37,7 +37,7 @@
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-            <a class="nav-link disabled" href="#">Sign out</a>
+            <a class="nav-link disabled" href="/logout">Sign out</a>
         </form>
     </div>
 </nav>
