adds postcode to pubs page

--- a/templates/Pages/pubs.html.twig
+++ b/templates/Pages/pubs.html.twig
@@ -31,7 +31,7 @@
                                         <li class="list-inline-item m-0"><i class="fa fa-star-o text-gray"></i></li>
                                     </ul>
                                 </div>
-                                <a class="small" href="#">Get directions</a>
+                                <a class="small" target="_blank" href="https://www.google.co.uk/maps/place/{{ pub.postcode }}">Get directions</a>
                             </div>
                             <img src="{{ pub.image }}"
                                  alt="Generic placeholder image" width="200" class="ml-lg-5 order-1 order-lg-2">
